# nxp-legacy-lpc-mbed-ce

./: CMakeLists.txt  README.md  main.cpp  mbed_app.json5
custom_targets/: CMakeLists.txt  CustomUploadMethods.cmake  custom_targets.json5
custom_targets/TARGET_LPC11UXX/: CMakeLists.txt
custom_targets/TARGET_LPC1769/: CMakeLists.txt
